--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#97;&#105;&#x6c;&#116;&#111;&#58;&#x73;&#117;&#112;&#x70;&#x6f;&#x72;&#116;&#x40;&#118;&#105;&#x76;&#97;&#x72;a&#100;&#111;&#46;&#99;&#111;m">&#x73;&#117;&#112;&#x70;&#x6f;&#x72;&#116;&#x40;&#118;&#105;&#x76;&#97;&#x72;a&#100;&#111;&#46;&#99;&#111;m</a></li>
+<li>VivaRado <a href="&#109;&#x61;&#105;&#x6c;&#116;&#111;&#58;&#x73;&#x75;&#112;&#112;&#111;&#x72;&#x74;&#x40;v&#105;v&#97;&#114;&#97;&#100;&#111;&#x2e;&#x63;&#111;m">&#x73;&#x75;&#112;&#112;&#111;&#x72;&#x74;&#x40;v&#105;v&#97;&#114;&#97;&#100;&#111;&#x2e;&#x63;&#111;m</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#x61;&#105;&#x6c;&#x74;&#111;&#58;&#x6d;&#x6a;&#108;&#x61;&#103;&#97;&#x74;&#x74;&#117;&#x74;&#x61;&#x40;&#103;&#x6d;&#x61;&#105;&#x6c;&#x2e;&#99;&#x6f;&#x6d;">&#x6d;&#x6a;&#108;&#x61;&#103;&#97;&#x74;&#x74;&#117;&#x74;&#x61;&#x40;&#103;&#x6d;&#x61;&#105;&#x6c;&#x2e;&#99;&#x6f;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#97;&#105;&#x6c;&#x74;&#111;&#58;&#109;&#106;&#x6c;&#97;&#x67;&#x61;&#x74;&#116;&#117;&#x74;&#x61;&#64;&#103;&#109;&#x61;&#x69;&#x6c;&#x2e;&#99;&#x6f;&#109;">&#109;&#106;&#x6c;&#97;&#x67;&#x61;&#x74;&#116;&#117;&#x74;&#x61;&#64;&#103;&#109;&#x61;&#x69;&#x6c;&#x2e;&#99;&#x6f;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1435,7 +1435,7 @@ ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29
             MO bld All Capitals:                                     done, des70, 2019-05-15,  2h
             MO bld Complete:                                         done, des71, 2019-05-16,  5h
 
-    ADV-0003-0008-0001-0001 SeC MG:                                        des32, after des58, 3d
+    ADV-0003-0008-0001-0001 SeC MG:                                        des32, after des58, 4d
         3 SeC MG 1 reg_it:                                           done, des42, after des58, 1d
         3 SeC MG 2 bld_it:                                           done, des43, after des42, 1d
         3 SeC MG 3 thn_it:                                           done, des44, after des43, 1d
@@ -1702,7 +1702,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#97;&#105;&#x6c;&#116;&#x6f;&#58;&#115;u&#x70;&#x70;&#111;&#x72;&#116;&#64;&#x76;&#x69;&#118;&#x61;&#114;&#97;&#x64;o&#x2e;c&#x6f;&#109;">&#115;u&#x70;&#x70;&#111;&#x72;&#116;&#64;&#x76;&#x69;&#118;&#x61;&#114;&#97;&#x64;o&#x2e;c&#x6f;&#109;</a></li>
+<li><a href="&#x6d;&#97;&#x69;l&#x74;&#x6f;:s&#117;&#112;&#112;&#111;r&#x74;&#64;&#x76;&#x69;v&#97;&#114;&#97;&#100;&#111;.&#x63;&#x6f;&#109;">s&#117;&#112;&#112;&#111;r&#x74;&#64;&#x76;&#x69;v&#97;&#114;&#97;&#100;&#111;.&#x63;&#x6f;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
