--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;&#105;&#x6c;&#116;&#111;&#58;&#x73;&#x75;&#112;&#112;&#111;&#x72;&#x74;&#x40;v&#105;v&#97;&#114;&#97;&#100;&#111;&#x2e;&#x63;&#111;m">&#x73;&#x75;&#112;&#112;&#111;&#x72;&#x74;&#x40;v&#105;v&#97;&#114;&#97;&#100;&#111;&#x2e;&#x63;&#111;m</a></li>
+<li>VivaRado <a href="&#109;&#x61;&#105;&#x6c;&#x74;&#111;&#x3a;&#x73;&#x75;&#x70;p&#x6f;&#114;&#116;&#x40;&#118;i&#118;&#97;ra&#x64;&#111;&#46;&#x63;o&#109;">&#x73;&#x75;&#x70;p&#x6f;&#114;&#116;&#x40;&#118;i&#118;&#97;ra&#x64;&#111;&#46;&#x63;o&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#97;&#105;&#x6c;&#x74;&#111;&#58;&#109;&#106;&#x6c;&#97;&#x67;&#x61;&#x74;&#116;&#117;&#x74;&#x61;&#64;&#103;&#109;&#x61;&#x69;&#x6c;&#x2e;&#99;&#x6f;&#109;">&#109;&#106;&#x6c;&#97;&#x67;&#x61;&#x74;&#116;&#117;&#x74;&#x61;&#64;&#103;&#109;&#x61;&#x69;&#x6c;&#x2e;&#99;&#x6f;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#97;&#105;&#x6c;&#x74;&#x6f;&#58;&#x6d;&#106;&#108;&#97;&#x67;&#x61;&#116;&#116;&#117;&#116;&#x61;&#64;&#103;&#109;&#97;il.&#99;&#x6f;&#109;">&#x6d;&#106;&#108;&#97;&#x67;&#x61;&#116;&#116;&#117;&#116;&#x61;&#64;&#103;&#109;&#97;il.&#99;&#x6f;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1702,7 +1702,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#97;&#x69;l&#x74;&#x6f;:s&#117;&#112;&#112;&#111;r&#x74;&#64;&#x76;&#x69;v&#97;&#114;&#97;&#100;&#111;.&#x63;&#x6f;&#109;">s&#117;&#112;&#112;&#111;r&#x74;&#64;&#x76;&#x69;v&#97;&#114;&#97;&#100;&#111;.&#x63;&#x6f;&#109;</a></li>
+<li><a href="&#x6d;&#97;&#x69;&#x6c;&#x74;&#111;&#58;&#x73;u&#x70;&#112;&#111;&#114;&#x74;&#x40;&#118;&#105;&#118;a&#x72;&#97;&#100;&#111;&#46;&#x63;&#x6f;&#x6d;">&#x73;u&#x70;&#112;&#111;&#114;&#x74;&#x40;&#118;&#105;&#118;a&#x72;&#97;&#100;&#111;&#46;&#x63;&#x6f;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
