--- a/PREVIEW/index_SeC.html
+++ b/PREVIEW/index_SeC.html
@@ -27,22 +27,30 @@
 										<div class="sample M L XL" spellcheck="false" style="font-family: 'AdventProSeC_thn';">
 											<span class="info_perm">Russian pangram:</span>
 											<span>
-												Съешь ещё этих мягких французских булок да выпей же чаю
+												Съешь ещё этих мягких французских булок да выпей же чаю.
+												<br>
+												СЪЕШЬ ЕЩЁ ЭТИХ МЯГКИХ ФРАНЦУЗСКИХ БУЛОК ДА ВЫПЕЙ ЖЕ ЧАЮ.
 											</span>
 											<hr>
 											<span class="info_perm">Serbian pangram:</span>
 											<span>
 												Чешће цeђење мрeжастим џаком побољшава фертилизацију генских хибрида.
+												<br>
+												ЧЕШЋЕ ЦEЂЕЊЕ МРEЖАСТИМ ЏАКОМ ПОБОЉШАВА ФЕРТИЛИЗАЦИЈУ ГЕНСКИХ ХИБРИДА.
 											</span>
 											<hr>
 											<span class="info_perm">Bulgarian pangram:</span>
 											<span>
 												Под южно дърво, цъфтящо в синьо, бягаше малко пухкаво зайче.
+												<br>
+												ПОД ЮЖНО ДЪРВО, ЦЪФТЯЩО В СИНЬО, БЯГАШЕ МАЛКО ПУХКАВО ЗАЙЧЕ.
 											</span>
 											<hr>
 											<span class="info_perm">Kazakh pangram?:</span>
 											<span>
-												Мұны һәм немесе тіпті дар эс салам шайға ағып ең түрде бірге актёр хош чара қартаю щетка аварияға өте жатқан француз въезд сухость құймаларын жей
+												Мұны һәм немесе тіпті дар эс салам шайға ағып ең түрде бірге актёр хош чара қартаю щетка аварияға өте жатқан француз въезд сухость құймаларын жей.
+												<br>
+												МҰНЫ ҺӘМ НЕМЕСЕ ТІПТІ ДАР ЭС САЛАМ ШАЙҒА АҒЫП ЕҢ ТҮРДЕ БІРГЕ АКТЁР ХОШ ЧАРА ҚАРТАЮ ЩЕТКА АВАРИЯҒА ӨТЕ ЖАТҚАН ФРАНЦУЗ ВЪЕЗД СУХОСТЬ ҚҰЙМАЛАРЫН ЖЕЙ.
 											</span>
 											<hr>
 										</div>
@@ -57,22 +65,68 @@
 										<div class="sample M L XL" spellcheck="false" style="font-family: 'AdventProSeC_reg';">
 											<span class="info_perm">Russian pangram:</span>
 											<span>
-												Съешь ещё этих мягких французских булок да выпей же чаю
+												Съешь ещё этих мягких французских булок да выпей же чаю.
+												<br>
+												СЪЕШЬ ЕЩЁ ЭТИХ МЯГКИХ ФРАНЦУЗСКИХ БУЛОК ДА ВЫПЕЙ ЖЕ ЧАЮ.
 											</span>
 											<hr>
 											<span class="info_perm">Serbian pangram:</span>
 											<span>
 												Чешће цeђење мрeжастим џаком побољшава фертилизацију генских хибрида.
+												<br>
+												ЧЕШЋЕ ЦEЂЕЊЕ МРEЖАСТИМ ЏАКОМ ПОБОЉШАВА ФЕРТИЛИЗАЦИЈУ ГЕНСКИХ ХИБРИДА.
 											</span>
 											<hr>
 											<span class="info_perm">Bulgarian pangram:</span>
 											<span>
 												Под южно дърво, цъфтящо в синьо, бягаше малко пухкаво зайче.
+												<br>
+												ПОД ЮЖНО ДЪРВО, ЦЪФТЯЩО В СИНЬО, БЯГАШЕ МАЛКО ПУХКАВО ЗАЙЧЕ.
 											</span>
 											<hr>
 											<span class="info_perm">Kazakh pangram?:</span>
 											<span>
-												Мұны һәм немесе тіпті дар эс салам шайға ағып ең түрде бірге актёр хош чара қартаю щетка аварияға өте жатқан француз въезд сухость құймаларын жей
+												Мұны һәм немесе тіпті дар эс салам шайға ағып ең түрде бірге актёр хош чара қартаю щетка аварияға өте жатқан француз въезд сухость құймаларын жей.
+												<br>
+												МҰНЫ ҺӘМ НЕМЕСЕ ТІПТІ ДАР ЭС САЛАМ ШАЙҒА АҒЫП ЕҢ ТҮРДЕ БІРГЕ АКТЁР ХОШ ЧАРА ҚАРТАЮ ЩЕТКА АВАРИЯҒА ӨТЕ ЖАТҚАН ФРАНЦУЗ ВЪЕЗД СУХОСТЬ ҚҰЙМАЛАРЫН ЖЕЙ.
+											</span>
+											<hr>
+										</div>
+									</figure>
+								</div>
+							</div>
+						</div>
+						<div class="content">
+							<div class="fonts">
+								<div class="font">
+									<figure>
+										<div class="sample M L XL" spellcheck="false" style="font-family: 'AdventProSeC_bld';">
+											<span class="info_perm">Russian pangram:</span>
+											<span>
+												Съешь ещё этих мягких французских булок да выпей же чаю.
+												<br>
+												СЪЕШЬ ЕЩЁ ЭТИХ МЯГКИХ ФРАНЦУЗСКИХ БУЛОК ДА ВЫПЕЙ ЖЕ ЧАЮ.
+											</span>
+											<hr>
+											<span class="info_perm">Serbian pangram:</span>
+											<span>
+												Чешће цeђење мрeжастим џаком побољшава фертилизацију генских хибрида.
+												<br>
+												ЧЕШЋЕ ЦEЂЕЊЕ МРEЖАСТИМ ЏАКОМ ПОБОЉШАВА ФЕРТИЛИЗАЦИЈУ ГЕНСКИХ ХИБРИДА.
+											</span>
+											<hr>
+											<span class="info_perm">Bulgarian pangram:</span>
+											<span>
+												Под южно дърво, цъфтящо в синьо, бягаше малко пухкаво зайче.
+												<br>
+												ПОД ЮЖНО ДЪРВО, ЦЪФТЯЩО В СИНЬО, БЯГАШЕ МАЛКО ПУХКАВО ЗАЙЧЕ.
+											</span>
+											<hr>
+											<span class="info_perm">Kazakh pangram?:</span>
+											<span>
+												Мұны һәм немесе тіпті дар эс салам шайға ағып ең түрде бірге актёр хош чара қартаю щетка аварияға өте жатқан француз въезд сухость құймаларын жей.
+												<br>
+												МҰНЫ ҺӘМ НЕМЕСЕ ТІПТІ ДАР ЭС САЛАМ ШАЙҒА АҒЫП ЕҢ ТҮРДЕ БІРГЕ АКТЁР ХОШ ЧАРА ҚАРТАЮ ЩЕТКА АВАРИЯҒА ӨТЕ ЖАТҚАН ФРАНЦУЗ ВЪЕЗД СУХОСТЬ ҚҰЙМАЛАРЫН ЖЕЙ.
 											</span>
 											<hr>
 										</div>
