Advent 4 Schedule update

--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.021 | 2019/06/18</title>
+		<title>VRD | Advent | 3.021 | 2019/07/06</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#97;&#x69;&#x6c;&#x74;&#x6f;&#58;&#115;u&#x70;&#x70;&#x6f;r&#116;&#64;&#118;&#x69;&#x76;&#97;&#x72;&#x61;&#100;&#x6f;&#46;&#99;&#111;&#109;">&#115;u&#x70;&#x70;&#x6f;r&#116;&#64;&#118;&#x69;&#x76;&#97;&#x72;&#x61;&#100;&#x6f;&#46;&#99;&#111;&#109;</a></li>
+<li>VivaRado <a href="&#109;&#x61;&#x69;&#108;&#116;&#111;&#58;s&#x75;&#112;&#x70;&#111;&#x72;&#116;&#64;&#118;&#105;&#x76;&#x61;&#114;&#97;&#100;&#x6f;&#46;&#99;o&#109;">s&#x75;&#112;&#x70;&#111;&#x72;&#116;&#64;&#118;&#105;&#x76;&#x61;&#114;&#97;&#100;&#x6f;&#46;&#99;o&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#97;&#x69;lto:&#109;&#106;&#x6c;&#x61;&#x67;&#97;&#116;tut&#97;&#64;&#x67;&#x6d;&#97;&#x69;&#x6c;&#x2e;&#99;&#111;&#109;">&#109;&#106;&#x6c;&#x61;&#x67;&#97;&#116;tut&#97;&#64;&#x67;&#x6d;&#97;&#x69;&#x6c;&#x2e;&#99;&#111;&#109;</a></li>
+<li>Michael LaGattuta <a href="m&#97;&#105;&#x6c;&#x74;&#111;&#58;&#109;&#x6a;&#108;&#97;&#103;a&#x74;t&#x75;&#x74;&#97;&#64;&#x67;&#x6d;&#x61;&#x69;&#108;&#x2e;&#99;&#111;&#x6d;">&#109;&#x6a;&#108;&#97;&#103;a&#x74;t&#x75;&#x74;&#97;&#64;&#x67;&#x6d;&#x61;&#x69;&#108;&#x2e;&#99;&#111;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1385,13 +1385,13 @@ later you can export to Componentized UFOs.</p>
 
 <p>We are preparing our approval documents for our stakeholders to review, for Script Extension to Cyrillic for version 3.</p>
 
-<p><strong>2019-04-27</strong>:</p>
+<p><strong>2019-07-06</strong>:</p>
 
 <p>We have a layout for the plan of Script Extension and Master Extension that will take place between 2019-04-27 until 2019-06-02.</p>
 
 <p>We will initially design and integrate the Cyrillic to Advent∞3, to 3 Original Masters (MO) and 3 Generated Master (MG). The design and integration for Advent∞3 SeC will take approximately 11 days. At this point Advent∞3 will be available with Cyrillic at 7 Instances of Upright and 7 Instances of Italic.</p>
 
-<p>After that we will branch and update the Advent∞3: 3 MO and 3 MG with additional Masters 1 MO and 9 MG, Initially we will do a Master Extension for Latin and then a Script Extension for all the new masters. That will cover the Black and Wide axes and result to Advent∞4. For the Latin Masters Extension (MeL), Greek Masters Extension (MeG) and Cyrillic Script Extension (SeC) this will require approximately 20 Days. </p>
+<p>After that we will branch and update the Advent∞3 to Advent∞4: 3 MO and 3 MG with additional Masters 1 MO and 9 MG, Initially we will do a Master Extension for all the new masters. That will cover the Black, Wide axes and Wide Italic and result to Advent∞4. Approximately by the end of July.</p>
 
 <p>The planning is for alphabetic glyphs and does not include any calculation of additional glyphs of any form. We will have to review the progress and update accordingly. After the review of the plan and assignment of additional tasks for fulfilment of additional glyphs, kerning and arbitrary corrections, Advent∞4 will be available with Cyrillic at 18 Instances of Upright and Upright Wide, 18 Instances of Italic and Italic Wide, total of 36 Instances.</p>
 
@@ -1411,7 +1411,7 @@ ADV-0004-0006 Cupcake Day!:                                          done, des9,
 ADV-0004-0007-0001 Advent 3 and 4 Master Planning:                         des10, 2019-04-14, 2019-04-25
 
 ADV-0003-0008-0001 Advent 3 Script Extension Cyrillic (SeC) Planning:      des27, 2019-04-26, 2h
-ADV-0004-0007-0001 Advent 4 Master Extension Latin (MeL) Planning:         des28, 2019-04-27, 2h
+ADV-0004-0007-0001 Advent 4 Master Extension Latin (MaE) Planning:         des28, 2019-04-27, 2h
 ADV-0004-0008-0001 Advent 4 Script Extension Cyrillic (SeC) Planning:      des28, 2019-04-27, 1h
 #
 section Advent 3 SE Cyrillic
@@ -1450,40 +1450,30 @@ ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29
         SeC MG fixes:                                                done, des72, after des44, 1d
 
     ADV-0003-0003-0001 Preview and Approval Documents:                     des77, 2019-06-12,  2d
-    ADV-0003-0004-0001 EFO Build for Version 3:                            des76, after des77, 10d
-    ADV-0003-0004-0001-0001 EFO Glyph Distributor:                         des78, after des77, 10d
+    #ADV-0003-0004-0001 EFO Build for Version 3:                            des76, after des77, 10d
+    #ADV-0003-0004-0001-0001 EFO Glyph Distributor:                         des78, after des77, 10d
 
-    ADV-0003-0005-0001 Kerning Planning SeC:                               des73, after des76, 2d
-        Kerning Pairs and Grouping:                                        des74, after des76, 1d
-        Kerning Compression:                                               des75, after des74, 1d
+    #ADV-0003-0005-0001 Kerning Planning SeC:                               des73, after des76, 2d
+    #    Kerning Pairs and Grouping:                                        des74, after des76, 1d
+    #    Kerning Compression:                                               des75, after des74, 1d
 #
-section 4 ME Latin and Greek
+section 4 Master Extension All Scripts
 
-ADV-0004-0007-0001 4 ME Latin and ME Greek:                          crit, des33, after des74, 12d
-    ADV-0004-0007-0001 MeL MO:                                             des34, after des74, 4d
-        4 MeL MO 1 reg:                                                    des45, after des74, 1d
-        4 MeL MO 2 thn:                                                    des46, after des45, 1d
-        4 MeL MO 3 bld:                                                    des47, after des46, 1d
-        4 MeL MO 4 blk:                                                    des57, after des47, 1d
-    ADV-0004-0007-0001 MeL MG:                                             des35, after des34, 8d
-        4 MeL MG 1 reg_it, reg_wd_it:                                      des48, after des34, 2d
-        4 MeL MG 2 thn_it, thn_wd_it:                                      des49, after des48, 2d
-        4 MeL MG 3 bld_it, bld_wd_it:                                      des50, after des49, 2d
-        4 MeL MG 4 blk_it, blk_wd_it:                                      des51, after des50, 2d
-#
-section 4 SE Cyrillic
-
-ADV-0004-0008-0001 4 SE Cyrillic:                                    crit, des36, after des35, 12d
-    ADV-0004-0008-0001 SeC MO:                                             des37, after des35, 4d
-        4 SeC MO reg 1:                                                    des51, after des35, 1d
-        4 SeC MO thn 2:                                                    des52, after des51, 1d
-        4 SeC MO bld 3:                                                    des53, after des52, 1d
-        4 SeC MO blk 4:                                                    des60, after des53, 1d
-    ADV-0004-0008-0001 SeC MG:                                             des38, after des37, 8d
-        4 SeC MG reg_it 1, reg_wd_it:                                      des54, after des37, 2d
-        4 SeC MG thn_it 2, thn_wd_it:                                      des55, after des54, 2d
-        4 SeC MG bld_it 3, bld_wd_it:                                      des56, after des55, 2d
-        4 SeC MG blk_it 4, blk_wd_it:                                      des61, after des56, 2d
+ADV-0004-0007-0001 4 Master Extension:                              crit, des33, 2019-07-06, 12d
+    ADV-0004-0007-0001 MaE MO:                                             des76, 2019-07-06, 8d
+        4 MaE MO 4 blk:                                                    des77, 2019-07-06, 8d
+    ADV-0004-0007-0001 MaE MG blk_it:                                      des78, after des77, 1d
+        4 MaE MO 4 blk_it:                                                 des79, after des77, 1d
+    ADV-0004-0007-0001 MaE MG wd:                                          des34, after des79, 4d
+        4 MaE MG 1 thn_wd:                                                 des45, after des79, 1d
+        4 MaE MG 2 reg_wd:                                                 des46, after des45, 1d
+        4 MaE MG 3 bld_wd:                                                 des47, after des46, 1d
+        4 MaE MG 4 blk_wd:                                                 des57, after des47, 1d
+    ADV-0004-0007-0001 MaE MG wd_it:                                       des35, after des34, 8d
+        4 MaE MG 1 reg_wd_it:                                              des48, after des34, 2d
+        4 MaE MG 2 thn_wd_it:                                              des49, after des48, 2d
+        4 MaE MG 3 bld_wd_it:                                              des50, after des49, 2d
+        4 MaE MG 4 blk_wd_it:                                              des51, after des50, 2d
 </code></pre>
 
 <ul>
@@ -1736,7 +1726,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#97;i&#x6c;&#x74;o&#x3a;&#115;&#x75;&#112;&#112;&#x6f;&#x72;&#x74;&#64;&#x76;&#105;&#x76;&#x61;&#114;&#x61;&#100;&#x6f;&#x2e;&#x63;&#x6f;&#109;">&#115;&#x75;&#112;&#112;&#x6f;&#x72;&#x74;&#64;&#x76;&#105;&#x76;&#x61;&#114;&#x61;&#100;&#x6f;&#x2e;&#x63;&#x6f;&#109;</a></li>
+<li><a href="&#109;&#x61;&#x69;&#x6c;&#x74;&#x6f;:&#115;&#x75;&#112;&#112;o&#x72;&#116;&#64;&#118;&#x69;&#x76;&#97;&#x72;a&#x64;&#111;&#x2e;&#x63;&#111;&#109;">&#115;&#x75;&#112;&#112;o&#x72;&#116;&#64;&#118;&#x69;&#x76;&#97;&#x72;a&#x64;&#111;&#x2e;&#x63;&#111;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
