Advent 4 Schedule update

--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.021 | 2019/07/06</title>
+		<title>VRD | Advent | 3.021 | 2019/07/15</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;&#x69;&#108;&#116;&#111;&#58;s&#x75;&#112;&#x70;&#111;&#x72;&#116;&#64;&#118;&#105;&#x76;&#x61;&#114;&#97;&#100;&#x6f;&#46;&#99;o&#109;">s&#x75;&#112;&#x70;&#111;&#x72;&#116;&#64;&#118;&#105;&#x76;&#x61;&#114;&#97;&#100;&#x6f;&#46;&#99;o&#109;</a></li>
+<li>VivaRado <a href="&#x6d;&#97;&#x69;&#108;&#116;&#x6f;&#x3a;&#115;&#117;&#112;&#112;&#111;&#x72;&#x74;&#64;&#x76;&#105;&#118;&#97;&#114;&#97;&#x64;&#x6f;&#x2e;&#99;&#111;&#109;">&#115;&#117;&#112;&#112;&#111;&#x72;&#x74;&#64;&#x76;&#105;&#118;&#97;&#114;&#97;&#x64;&#x6f;&#x2e;&#99;&#111;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="m&#97;&#105;&#x6c;&#x74;&#111;&#58;&#109;&#x6a;&#108;&#97;&#103;a&#x74;t&#x75;&#x74;&#97;&#64;&#x67;&#x6d;&#x61;&#x69;&#108;&#x2e;&#99;&#111;&#x6d;">&#109;&#x6a;&#108;&#97;&#103;a&#x74;t&#x75;&#x74;&#97;&#64;&#x67;&#x6d;&#x61;&#x69;&#108;&#x2e;&#99;&#111;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#97;&#105;&#108;&#x74;&#111;&#58;&#109;&#x6a;&#108;&#97;&#103;&#x61;&#116;&#x74;&#117;&#x74;&#97;&#x40;&#103;&#x6d;a&#105;&#x6c;&#46;&#99;&#x6f;&#x6d;">&#109;&#x6a;&#108;&#97;&#103;&#x61;&#116;&#x74;&#117;&#x74;&#97;&#x40;&#103;&#x6d;a&#105;&#x6c;&#46;&#99;&#x6f;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1460,8 +1460,8 @@ ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29
 section 4 Master Extension All Scripts
 
 ADV-0004-0007-0001 4 Master Extension:                              crit, des33, 2019-07-06, 12d
-    ADV-0004-0007-0001 MaE MO:                                             des76, 2019-07-06, 8d
-        4 MaE MO 4 blk:                                                    des77, 2019-07-06, 8d
+    ADV-0004-0007-0001 MaE MO:                                             des76, 2019-07-06, 12d
+        4 MaE MO 4 blk:                                                    des77, 2019-07-06, 12d
     ADV-0004-0007-0001 MaE MG blk_it:                                      des78, after des77, 1d
         4 MaE MO 4 blk_it:                                                 des79, after des77, 1d
     ADV-0004-0007-0001 MaE MG wd:                                          des34, after des79, 4d
@@ -1726,7 +1726,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#x61;&#x69;&#x6c;&#x74;&#x6f;:&#115;&#x75;&#112;&#112;o&#x72;&#116;&#64;&#118;&#x69;&#x76;&#97;&#x72;a&#x64;&#111;&#x2e;&#x63;&#111;&#109;">&#115;&#x75;&#112;&#112;o&#x72;&#116;&#64;&#118;&#x69;&#x76;&#97;&#x72;a&#x64;&#111;&#x2e;&#x63;&#111;&#109;</a></li>
+<li><a href="&#x6d;&#x61;&#x69;l&#x74;o&#x3a;&#x73;&#117;&#x70;&#x70;&#x6f;&#x72;&#116;&#64;v&#105;&#118;&#97;&#114;&#97;&#100;&#x6f;&#46;co&#109;">&#x73;&#117;&#x70;&#x70;&#x6f;&#x72;&#116;&#64;v&#105;&#118;&#97;&#114;&#97;&#100;&#x6f;&#46;co&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
