--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#97;&#x69;&#108;&#116;&#x6f;&#x3a;&#115;&#117;&#112;&#112;&#111;&#x72;&#x74;&#64;&#x76;&#105;&#118;&#97;&#114;&#97;&#x64;&#x6f;&#x2e;&#99;&#111;&#109;">&#115;&#117;&#112;&#112;&#111;&#x72;&#x74;&#64;&#x76;&#105;&#118;&#97;&#114;&#97;&#x64;&#x6f;&#x2e;&#99;&#111;&#109;</a></li>
+<li>VivaRado <a href="&#109;&#x61;&#105;l&#x74;&#111;&#x3a;&#x73;&#117;&#x70;p&#111;&#x72;&#x74;&#x40;&#118;&#105;&#x76;a&#114;&#97;&#x64;&#111;&#x2e;&#99;&#111;&#109;">&#x73;&#117;&#x70;p&#111;&#x72;&#x74;&#x40;&#118;&#105;&#x76;a&#114;&#97;&#x64;&#111;&#x2e;&#99;&#111;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#97;&#105;&#108;&#x74;&#111;&#58;&#109;&#x6a;&#108;&#97;&#103;&#x61;&#116;&#x74;&#117;&#x74;&#97;&#x40;&#103;&#x6d;a&#105;&#x6c;&#46;&#99;&#x6f;&#x6d;">&#109;&#x6a;&#108;&#97;&#103;&#x61;&#116;&#x74;&#117;&#x74;&#97;&#x40;&#103;&#x6d;a&#105;&#x6c;&#46;&#99;&#x6f;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;a&#105;&#x6c;&#x74;&#x6f;&#58;&#x6d;&#106;&#x6c;&#x61;&#x67;a&#116;&#116;&#x75;t&#97;&#64;&#103;&#109;&#x61;&#x69;&#x6c;&#46;&#x63;&#111;&#109;">&#x6d;&#106;&#x6c;&#x61;&#x67;a&#116;&#116;&#x75;t&#97;&#64;&#103;&#109;&#x61;&#x69;&#x6c;&#46;&#x63;&#111;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1726,7 +1726,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#x61;&#x69;l&#x74;o&#x3a;&#x73;&#117;&#x70;&#x70;&#x6f;&#x72;&#116;&#64;v&#105;&#118;&#97;&#114;&#97;&#100;&#x6f;&#46;co&#109;">&#x73;&#117;&#x70;&#x70;&#x6f;&#x72;&#116;&#64;v&#105;&#118;&#97;&#114;&#97;&#100;&#x6f;&#46;co&#109;</a></li>
+<li><a href="&#x6d;a&#105;&#x6c;&#x74;&#x6f;&#x3a;&#115;&#x75;&#112;&#x70;&#111;&#x72;&#116;&#x40;&#x76;&#x69;&#x76;&#97;&#114;&#97;&#100;&#111;&#x2e;&#x63;&#x6f;m">&#115;&#x75;&#112;&#x70;&#111;&#x72;&#116;&#x40;&#x76;&#x69;&#x76;&#97;&#114;&#97;&#100;&#111;&#x2e;&#x63;&#x6f;m</a></li>
 </ul></li>
 </ul></li>
 </ul>
