--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.021 | 2019/07/15</title>
+		<title>VRD | Advent | 3.021 | 2019/08/19</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;&#105;l&#x74;&#111;&#x3a;&#x73;&#117;&#x70;p&#111;&#x72;&#x74;&#x40;&#118;&#105;&#x76;a&#114;&#97;&#x64;&#111;&#x2e;&#99;&#111;&#109;">&#x73;&#117;&#x70;p&#111;&#x72;&#x74;&#x40;&#118;&#105;&#x76;a&#114;&#97;&#x64;&#111;&#x2e;&#99;&#111;&#109;</a></li>
+<li>VivaRado <a href="&#109;&#x61;&#x69;&#x6c;&#x74;&#111;&#x3a;&#115;&#117;&#112;&#112;&#111;&#114;&#x74;&#x40;&#118;&#x69;&#118;&#x61;&#114;&#97;&#100;&#x6f;&#x2e;&#x63;&#111;&#109;">&#115;&#117;&#112;&#112;&#111;&#114;&#x74;&#x40;&#118;&#x69;&#118;&#x61;&#114;&#97;&#100;&#x6f;&#x2e;&#x63;&#111;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;a&#105;&#x6c;&#x74;&#x6f;&#58;&#x6d;&#106;&#x6c;&#x61;&#x67;a&#116;&#116;&#x75;t&#97;&#64;&#103;&#109;&#x61;&#x69;&#x6c;&#46;&#x63;&#111;&#109;">&#x6d;&#106;&#x6c;&#x61;&#x67;a&#116;&#116;&#x75;t&#97;&#64;&#103;&#109;&#x61;&#x69;&#x6c;&#46;&#x63;&#111;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#x61;&#105;&#x6c;&#x74;&#111;&#58;&#x6d;&#106;&#108;&#x61;&#x67;&#97;&#116;&#116;&#x75;&#x74;&#x61;&#64;&#x67;&#109;&#97;&#105;&#x6c;&#46;&#x63;&#x6f;m">&#x6d;&#106;&#108;&#x61;&#x67;&#97;&#116;&#116;&#x75;&#x74;&#x61;&#64;&#x67;&#109;&#97;&#105;&#x6c;&#46;&#x63;&#x6f;m</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1450,30 +1450,30 @@ ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29
         SeC MG fixes:                                                done, des72, after des44, 1d
 
     ADV-0003-0003-0001 Preview and Approval Documents:                     des77, 2019-06-12,  2d
-    #ADV-0003-0004-0001 EFO Build for Version 3:                            des76, after des77, 10d
-    #ADV-0003-0004-0001-0001 EFO Glyph Distributor:                         des78, after des77, 10d
+    #ADV-0003-0004-0001 EFO Build for Version 3:                           des76, after des77, 10d
+    #ADV-0003-0004-0001-0001 EFO Glyph Distributor:                        des78, after des77, 10d
 
-    #ADV-0003-0005-0001 Kerning Planning SeC:                               des73, after des76, 2d
-    #    Kerning Pairs and Grouping:                                        des74, after des76, 1d
-    #    Kerning Compression:                                               des75, after des74, 1d
+    #ADV-0003-0005-0001 Kerning Planning SeC:                              des73, after des76, 2d
+    #    Kerning Pairs and Grouping:                                       des74, after des76, 1d
+    #    Kerning Compression:                                              des75, after des74, 1d
 #
 section 4 Master Extension All Scripts
 
 ADV-0004-0007-0001 4 Master Extension:                              crit, des33, 2019-07-06, 12d
-    ADV-0004-0007-0001 MaE MO:                                             des76, 2019-07-06, 12d
-        4 MaE MO 4 blk:                                                    des77, 2019-07-06, 12d
-    ADV-0004-0007-0001 MaE MG blk_it:                                      des78, after des77, 1d
-        4 MaE MO 4 blk_it:                                                 des79, after des77, 1d
-    ADV-0004-0007-0001 MaE MG wd:                                          des34, after des79, 4d
-        4 MaE MG 1 thn_wd:                                                 des45, after des79, 1d
-        4 MaE MG 2 reg_wd:                                                 des46, after des45, 1d
-        4 MaE MG 3 bld_wd:                                                 des47, after des46, 1d
-        4 MaE MG 4 blk_wd:                                                 des57, after des47, 1d
-    ADV-0004-0007-0001 MaE MG wd_it:                                       des35, after des34, 8d
-        4 MaE MG 1 reg_wd_it:                                              des48, after des34, 2d
-        4 MaE MG 2 thn_wd_it:                                              des49, after des48, 2d
-        4 MaE MG 3 bld_wd_it:                                              des50, after des49, 2d
-        4 MaE MG 4 blk_wd_it:                                              des51, after des50, 2d
+    ADV-0004-0007-0001 MaE MO:                                      done, des76, 2019-07-06, 2019-08-19
+        4 MaE MO 4 blk:                                             done, des77, 2019-07-06, 2019-08-19
+    ADV-0004-0007-0001 MaE MG blk_it:                                     des78, after des77, 1d
+        4 MaE MO 4 blk_it:                                                des79, after des77, 1d
+    ADV-0004-0007-0001 MaE MG wd:                                         des34, after des79, 4d
+        4 MaE MG 1 thn_wd:                                                des45, after des79, 1d
+        4 MaE MG 2 reg_wd:                                                des46, after des45, 1d
+        4 MaE MG 3 bld_wd:                                                des47, after des46, 1d
+        4 MaE MG 4 blk_wd:                                                des57, after des47, 1d
+    ADV-0004-0007-0001 MaE MG wd_it:                                      des35, after des34, 8d
+        4 MaE MG 1 reg_wd_it:                                             des48, after des34, 2d
+        4 MaE MG 2 thn_wd_it:                                             des49, after des48, 2d
+        4 MaE MG 3 bld_wd_it:                                             des50, after des49, 2d
+        4 MaE MG 4 blk_wd_it:                                             des51, after des50, 2d
 </code></pre>
 
 <ul>
@@ -1726,7 +1726,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;a&#105;&#x6c;&#x74;&#x6f;&#x3a;&#115;&#x75;&#112;&#x70;&#111;&#x72;&#116;&#x40;&#x76;&#x69;&#x76;&#97;&#114;&#97;&#100;&#111;&#x2e;&#x63;&#x6f;m">&#115;&#x75;&#112;&#x70;&#111;&#x72;&#116;&#x40;&#x76;&#x69;&#x76;&#97;&#114;&#97;&#100;&#111;&#x2e;&#x63;&#x6f;m</a></li>
+<li><a href="&#x6d;&#97;&#x69;&#x6c;&#x74;&#x6f;&#58;&#x73;&#x75;&#x70;&#x70;&#111;r&#116;&#64;&#x76;&#105;&#118;&#97;&#x72;&#97;d&#111;&#x2e;&#99;&#x6f;m">&#x73;&#x75;&#x70;&#x70;&#111;r&#116;&#64;&#x76;&#105;&#118;&#97;&#x72;&#97;d&#111;&#x2e;&#99;&#x6f;m</a></li>
 </ul></li>
 </ul></li>
 </ul>
