--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.021 | 2019/08/19</title>
+		<title>VRD | Advent | 3.022 | 2019/08/19</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;&#x69;&#x6c;&#x74;&#111;&#x3a;&#115;&#117;&#112;&#112;&#111;&#114;&#x74;&#x40;&#118;&#x69;&#118;&#x61;&#114;&#97;&#100;&#x6f;&#x2e;&#x63;&#111;&#109;">&#115;&#117;&#112;&#112;&#111;&#114;&#x74;&#x40;&#118;&#x69;&#118;&#x61;&#114;&#97;&#100;&#x6f;&#x2e;&#x63;&#111;&#109;</a></li>
+<li>VivaRado <a href="&#x6d;&#x61;&#x69;&#108;&#x74;o&#58;&#x73;&#117;&#112;&#x70;&#x6f;&#114;&#116;&#64;&#118;&#x69;&#118;&#97;&#114;&#x61;&#x64;&#111;&#46;&#99;&#x6f;&#x6d;">&#x73;&#117;&#112;&#x70;&#x6f;&#114;&#116;&#64;&#118;&#x69;&#118;&#97;&#114;&#x61;&#x64;&#111;&#46;&#99;&#x6f;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#x61;&#105;&#x6c;&#x74;&#111;&#58;&#x6d;&#106;&#108;&#x61;&#x67;&#97;&#116;&#116;&#x75;&#x74;&#x61;&#64;&#x67;&#109;&#97;&#105;&#x6c;&#46;&#x63;&#x6f;m">&#x6d;&#106;&#108;&#x61;&#x67;&#97;&#116;&#116;&#x75;&#x74;&#x61;&#64;&#x67;&#109;&#97;&#105;&#x6c;&#46;&#x63;&#x6f;m</a></li>
+<li>Michael LaGattuta <a href="&#109;&#x61;&#105;&#x6c;&#x74;&#x6f;&#x3a;&#x6d;&#106;&#108;&#x61;&#x67;&#97;&#116;&#x74;&#117;&#x74;&#97;&#64;&#103;&#x6d;&#97;&#x69;&#108;&#x2e;&#99;&#111;&#109;">&#x6d;&#106;&#108;&#x61;&#x67;&#97;&#116;&#x74;&#117;&#x74;&#97;&#64;&#103;&#x6d;&#97;&#x69;&#108;&#x2e;&#99;&#111;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1726,7 +1726,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#97;&#x69;&#x6c;&#x74;&#x6f;&#58;&#x73;&#x75;&#x70;&#x70;&#111;r&#116;&#64;&#x76;&#105;&#118;&#97;&#x72;&#97;d&#111;&#x2e;&#99;&#x6f;m">&#x73;&#x75;&#x70;&#x70;&#111;r&#116;&#64;&#x76;&#105;&#118;&#97;&#x72;&#97;d&#111;&#x2e;&#99;&#x6f;m</a></li>
+<li><a href="m&#x61;&#105;&#x6c;&#116;o&#58;&#115;&#117;&#112;&#x70;&#x6f;&#114;&#116;&#64;&#118;i&#118;&#97;&#114;&#x61;&#100;&#111;&#x2e;&#99;&#111;&#x6d;">&#115;&#117;&#112;&#x70;&#x6f;&#114;&#116;&#64;&#118;i&#118;&#97;&#114;&#x61;&#100;&#111;&#x2e;&#99;&#111;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
