blk version preview update

--- a/PREVIEW/index_SEME.html
+++ b/PREVIEW/index_SEME.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<title>Advent Pro SE Cyrillic 2019</title>
+		<title>Advent Pro SE ME 2019</title>
 		<meta name="description" content="Advent Pro Variable.">
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<link rel="stylesheet" type="text/css" href="css/font-face.css" />
@@ -18,13 +18,27 @@
 			<div id="typefaces">
 				<div class="ajax-wrapper">
 					<div class="typeface" id="advent_thnregbld">
-						<h2 class="sec_reg">Advent Pro SE Cyrillic 2019</h2>
-						<p class="description sec_reg">The Advent 3 Script Extension for Cyrillic.</p>
+						<h2 class="sec_reg">Advent Pro SE ME 2019</h2>
+						<p class="description sec_reg">The Advent 3 Script Extension and Master Extension.</p>
 						<div class="content">
 							<div class="fonts">
 								<div class="font">
 									<figure>
 										<div class="sample M L XL" spellcheck="false" style="font-family: 'AdventProSeC_thn';">
+											<span class="info_perm">Latin pangram:</span>
+											<span>
+												The quick brown fox jumps over the lazy dog.
+												<br>
+												THE QUICK BROWN FOX JUMPS OVER THE LAZY DOG
+											</span>
+											<hr>
+											<span class="info_perm">Greek pangram:</span>
+											<span>
+												ζαφείρι δέξου πάγκαλο, βαθών ψυχής το σήμα.
+												<br>
+												ΖΑΦΕΙΡΙ ΔΕΞΟΥ ΠΑΓΚΑΛΟ, ΒΑΘΩΝ ΨΥΧΗΣ ΤΟ ΣΗΜΑ.
+											</span>
+											<hr>
 											<span class="info_perm">Russian pangram:</span>
 											<span>
 												Съешь ещё этих мягких французских булок да выпей же чаю.
@@ -63,6 +77,20 @@
 								<div class="font">
 									<figure>
 										<div class="sample M L XL" spellcheck="false" style="font-family: 'AdventProSeC_reg';">
+											<span class="info_perm">Latin pangram:</span>
+											<span>
+												The quick brown fox jumps over the lazy dog.
+												<br>
+												THE QUICK BROWN FOX JUMPS OVER THE LAZY DOG
+											</span>
+											<hr>
+											<span class="info_perm">Greek pangram:</span>
+											<span>
+												ζαφείρι δέξου πάγκαλο, βαθών ψυχής το σήμα.
+												<br>
+												ΖΑΦΕΙΡΙ ΔΕΞΟΥ ΠΑΓΚΑΛΟ, ΒΑΘΩΝ ΨΥΧΗΣ ΤΟ ΣΗΜΑ.
+											</span>
+											<hr>
 											<span class="info_perm">Russian pangram:</span>
 											<span>
 												Съешь ещё этих мягких французских булок да выпей же чаю.
@@ -101,6 +129,20 @@
 								<div class="font">
 									<figure>
 										<div class="sample M L XL" spellcheck="false" style="font-family: 'AdventProSeC_bld';">
+											<span class="info_perm">Latin pangram:</span>
+											<span>
+												The quick brown fox jumps over the lazy dog.
+												<br>
+												THE QUICK BROWN FOX JUMPS OVER THE LAZY DOG
+											</span>
+											<hr>
+											<span class="info_perm">Greek pangram:</span>
+											<span>
+												ζαφείρι δέξου πάγκαλο, βαθών ψυχής το σήμα.
+												<br>
+												ΖΑΦΕΙΡΙ ΔΕΞΟΥ ΠΑΓΚΑΛΟ, ΒΑΘΩΝ ΨΥΧΗΣ ΤΟ ΣΗΜΑ.
+											</span>
+											<hr>
 											<span class="info_perm">Russian pangram:</span>
 											<span>
 												Съешь ещё этих мягких французских булок да выпей же чаю.
@@ -139,30 +181,44 @@
 								<div class="font">
 									<figure>
 										<div class="sample M L XL" spellcheck="false" style="font-family: 'AdventProSeC_blk';">
+											<span class="info_perm">Latin pangram:</span>
+											<span>
+												the quick brown fox jumps over the lazy dog.
+												<br>
+												THE QUICK BROWN FOX JUMPS OVER THE LAZY DOG
+											</span>
+											<hr>
+											<span class="info_perm">Greek pangram:</span>
+											<span>
+												ζαφείρι δέξου πάγκαλο, βαθών ψυχής το σήμα.
+												<br>
+												ΖΑΦΕΙΡΙ ΔΕΞΟΥ ΠΑΓΚΑΛΟ, ΒΑΘΩΝ ΨΥΧΗΣ ΤΟ ΣΗΜΑ.
+											</span>
+											<hr>
 											<span class="info_perm">Russian pangram:</span>
 											<span>
-												Съешь ещё этих мягких французских булок да выпей же чаю.
+												съешь ещё этих мягких французских булок да выпей же чаю.
 												<br>
 												СЪЕШЬ ЕЩЁ ЭТИХ МЯГКИХ ФРАНЦУЗСКИХ БУЛОК ДА ВЫПЕЙ ЖЕ ЧАЮ.
 											</span>
 											<hr>
 											<span class="info_perm">Serbian pangram:</span>
 											<span>
-												Чешће цeђење мрeжастим џаком побољшава фертилизацију генских хибрида.
+												чешће цeђење мрeжастим џаком побољшава фертилизацију генских хибрида.
 												<br>
 												ЧЕШЋЕ ЦEЂЕЊЕ МРEЖАСТИМ ЏАКОМ ПОБОЉШАВА ФЕРТИЛИЗАЦИЈУ ГЕНСКИХ ХИБРИДА.
 											</span>
 											<hr>
 											<span class="info_perm">Bulgarian pangram:</span>
 											<span>
-												Под южно дърво, цъфтящо в синьо, бягаше малко пухкаво зайче.
+												под южно дърво, цъфтящо в синьо, бягаше малко пухкаво зайче.
 												<br>
 												ПОД ЮЖНО ДЪРВО, ЦЪФТЯЩО В СИНЬО, БЯГАШЕ МАЛКО ПУХКАВО ЗАЙЧЕ.
 											</span>
 											<hr>
 											<span class="info_perm">Kazakh pangram?:</span>
 											<span>
-												Мұны һәм немесе тіпті дар эс салам шайға ағып ең түрде бірге актёр хош чара қартаю щетка аварияға өте жатқан француз въезд сухость құймаларын жей.
+												мұны һәм немесе тіпті дар эс салам шайға ағып ең түрде бірге актёр хош чара қартаю щетка аварияға өте жатқан француз въезд сухость құймаларын жей.
 												<br>
 												МҰНЫ ҺӘМ НЕМЕСЕ ТІПТІ ДАР ЭС САЛАМ ШАЙҒА АҒЫП ЕҢ ТҮРДЕ БІРГЕ АКТЁР ХОШ ЧАРА ҚАРТАЮ ЩЕТКА АВАРИЯҒА ӨТЕ ЖАТҚАН ФРАНЦУЗ ВЪЕЗД СУХОСТЬ ҚҰЙМАЛАРЫН ЖЕЙ.
 											</span>
