--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.022 | 2019/08/19</title>
+		<title>VRD | Advent | 3.022 | 2019/08/23</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#x61;&#x69;&#108;&#x74;o&#58;&#x73;&#117;&#112;&#x70;&#x6f;&#114;&#116;&#64;&#118;&#x69;&#118;&#97;&#114;&#x61;&#x64;&#111;&#46;&#99;&#x6f;&#x6d;">&#x73;&#117;&#112;&#x70;&#x6f;&#114;&#116;&#64;&#118;&#x69;&#118;&#97;&#114;&#x61;&#x64;&#111;&#46;&#99;&#x6f;&#x6d;</a></li>
+<li>VivaRado <a href="&#x6d;&#97;&#105;&#108;&#116;&#111;&#58;&#115;&#117;&#112;&#112;&#111;&#x72;&#116;&#x40;&#x76;&#105;&#118;&#97;&#x72;&#x61;&#x64;&#111;&#46;&#99;&#111;&#x6d;">&#115;&#117;&#112;&#112;&#111;&#x72;&#116;&#x40;&#x76;&#105;&#118;&#97;&#x72;&#x61;&#x64;&#111;&#46;&#99;&#111;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#x61;&#105;&#x6c;&#x74;&#x6f;&#x3a;&#x6d;&#106;&#108;&#x61;&#x67;&#97;&#116;&#x74;&#117;&#x74;&#97;&#64;&#103;&#x6d;&#97;&#x69;&#108;&#x2e;&#99;&#111;&#109;">&#x6d;&#106;&#108;&#x61;&#x67;&#97;&#116;&#x74;&#117;&#x74;&#97;&#64;&#103;&#x6d;&#97;&#x69;&#108;&#x2e;&#99;&#111;&#109;</a></li>
+<li>Michael LaGattuta <a href="m&#97;&#x69;&#108;&#x74;&#111;&#x3a;&#x6d;&#106;&#108;&#97;&#x67;&#x61;&#x74;&#x74;&#x75;&#x74;&#x61;&#x40;&#103;&#109;&#x61;&#105;&#x6c;&#x2e;&#x63;&#111;&#x6d;">&#x6d;&#106;&#108;&#97;&#x67;&#x61;&#x74;&#x74;&#x75;&#x74;&#x61;&#x40;&#103;&#109;&#x61;&#105;&#x6c;&#x2e;&#x63;&#111;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1462,13 +1462,13 @@ section 4 Master Extension All Scripts
 ADV-0004-0007-0001 4 Master Extension:                              crit, des33, 2019-07-06, 12d
     ADV-0004-0007-0001 MaE MO:                                      done, des76, 2019-07-06, 2019-08-19
         4 MaE MO 4 blk:                                             done, des77, 2019-07-06, 2019-08-19
-    ADV-0004-0007-0001 MaE MG blk_it:                                     des78, after des77, 1d
-        4 MaE MO 4 blk_it:                                                des79, after des77, 1d
-    ADV-0004-0007-0001 MaE MG wd:                                         des34, after des79, 4d
-        4 MaE MG 1 thn_wd:                                                des45, after des79, 1d
-        4 MaE MG 2 reg_wd:                                                des46, after des45, 1d
-        4 MaE MG 3 bld_wd:                                                des47, after des46, 1d
-        4 MaE MG 4 blk_wd:                                                des57, after des47, 1d
+    ADV-0004-0007-0001 MaE MG blk_it:                               done, des78, after des77, 2d
+        4 MaE MO 4 blk_it:                                          done, des79, after des77, 2d
+    ADV-0004-0007-0001 MaE MG wd:                                         des34, after des79, 8d
+        4 MaE MG 1 thn_wd:                                                des45, after des79, 2d
+        4 MaE MG 2 reg_wd:                                                des46, after des45, 2d
+        4 MaE MG 3 bld_wd:                                                des47, after des46, 2d
+        4 MaE MG 4 blk_wd:                                                des57, after des47, 2d
     ADV-0004-0007-0001 MaE MG wd_it:                                      des35, after des34, 8d
         4 MaE MG 1 reg_wd_it:                                             des48, after des34, 2d
         4 MaE MG 2 thn_wd_it:                                             des49, after des48, 2d
@@ -1726,7 +1726,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="m&#x61;&#105;&#x6c;&#116;o&#58;&#115;&#117;&#112;&#x70;&#x6f;&#114;&#116;&#64;&#118;i&#118;&#97;&#114;&#x61;&#100;&#111;&#x2e;&#99;&#111;&#x6d;">&#115;&#117;&#112;&#x70;&#x6f;&#114;&#116;&#64;&#118;i&#118;&#97;&#114;&#x61;&#100;&#111;&#x2e;&#99;&#111;&#x6d;</a></li>
+<li><a href="m&#97;&#105;&#x6c;&#116;&#111;&#x3a;s&#x75;&#x70;&#112;&#111;&#114;&#x74;&#x40;&#x76;&#x69;&#118;&#x61;&#114;&#x61;&#x64;&#x6f;&#46;&#99;&#111;&#x6d;">s&#x75;&#x70;&#112;&#111;&#114;&#x74;&#x40;&#x76;&#x69;&#118;&#x61;&#114;&#x61;&#x64;&#x6f;&#46;&#99;&#111;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
