--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#97;&#105;&#108;&#116;&#111;&#58;&#115;&#117;&#112;&#112;&#111;&#x72;&#116;&#x40;&#x76;&#105;&#118;&#97;&#x72;&#x61;&#x64;&#111;&#46;&#99;&#111;&#x6d;">&#115;&#117;&#112;&#112;&#111;&#x72;&#116;&#x40;&#x76;&#105;&#118;&#97;&#x72;&#x61;&#x64;&#111;&#46;&#99;&#111;&#x6d;</a></li>
+<li>VivaRado <a href="&#x6d;&#x61;&#x69;&#108;&#116;&#111;&#58;&#115;&#117;&#112;&#112;&#x6f;&#114;&#x74;&#x40;&#118;&#x69;&#x76;&#x61;&#114;&#97;&#x64;&#x6f;&#46;&#99;&#111;&#x6d;">&#115;&#117;&#112;&#112;&#x6f;&#114;&#x74;&#x40;&#118;&#x69;&#x76;&#x61;&#114;&#97;&#x64;&#x6f;&#46;&#99;&#111;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="m&#97;&#x69;&#108;&#x74;&#111;&#x3a;&#x6d;&#106;&#108;&#97;&#x67;&#x61;&#x74;&#x74;&#x75;&#x74;&#x61;&#x40;&#103;&#109;&#x61;&#105;&#x6c;&#x2e;&#x63;&#111;&#x6d;">&#x6d;&#106;&#108;&#97;&#x67;&#x61;&#x74;&#x74;&#x75;&#x74;&#x61;&#x40;&#103;&#109;&#x61;&#105;&#x6c;&#x2e;&#x63;&#111;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#109;a&#x69;&#x6c;&#x74;o&#x3a;&#x6d;&#x6a;&#108;&#97;g&#97;&#x74;&#116;&#x75;&#116;&#x61;&#x40;&#103;&#109;&#x61;&#x69;&#x6c;&#x2e;&#x63;&#111;&#109;">&#x6d;&#x6a;&#108;&#97;g&#97;&#x74;&#116;&#x75;&#116;&#x61;&#x40;&#103;&#109;&#x61;&#x69;&#x6c;&#x2e;&#x63;&#111;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1726,7 +1726,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="m&#97;&#105;&#x6c;&#116;&#111;&#x3a;s&#x75;&#x70;&#112;&#111;&#114;&#x74;&#x40;&#x76;&#x69;&#118;&#x61;&#114;&#x61;&#x64;&#x6f;&#46;&#99;&#111;&#x6d;">s&#x75;&#x70;&#112;&#111;&#114;&#x74;&#x40;&#x76;&#x69;&#118;&#x61;&#114;&#x61;&#x64;&#x6f;&#46;&#99;&#111;&#x6d;</a></li>
+<li><a href="&#109;&#x61;i&#x6c;&#x74;&#111;&#x3a;&#115;&#117;p&#x70;&#x6f;&#114;&#116;&#64;&#118;&#105;&#x76;a&#114;&#x61;&#100;&#x6f;&#x2e;&#99;&#111;&#109;">&#115;&#117;p&#x70;&#x6f;&#114;&#116;&#64;&#118;&#105;&#x76;a&#114;&#x61;&#100;&#x6f;&#x2e;&#99;&#111;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
