--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#x61;i&#108;&#x74;&#x6f;:&#x73;&#117;&#112;&#x70;o&#x72;&#116;&#64;&#118;&#105;&#x76;&#x61;&#114;&#97;&#100;&#111;&#46;&#99;&#x6f;&#x6d;">&#x73;&#117;&#112;&#x70;o&#x72;&#116;&#64;&#118;&#105;&#x76;&#x61;&#114;&#97;&#100;&#111;&#46;&#99;&#x6f;&#x6d;</a></li>
+<li>VivaRado <a href="&#x6d;&#x61;&#105;&#x6c;&#x74;&#x6f;&#58;&#115;u&#112;p&#x6f;&#114;t&#x40;&#118;&#x69;&#118;a&#114;&#97;&#x64;&#111;.&#x63;&#111;&#x6d;">&#115;u&#112;p&#x6f;&#114;t&#x40;&#118;&#x69;&#118;a&#114;&#97;&#x64;&#111;.&#x63;&#111;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#x61;&#x69;&#108;&#x74;&#x6f;&#x3a;&#109;&#x6a;&#108;&#97;&#103;a&#x74;&#116;u&#116;&#x61;&#64;&#103;&#109;&#97;&#x69;&#108;&#46;&#x63;&#x6f;&#109;">&#109;&#x6a;&#108;&#97;&#103;a&#x74;&#116;u&#116;&#x61;&#64;&#103;&#109;&#97;&#x69;&#108;&#46;&#x63;&#x6f;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#97;&#105;&#108;&#116;o&#x3a;&#109;&#106;&#108;&#x61;&#x67;&#97;&#116;&#x74;u&#116;&#x61;&#x40;&#x67;&#x6d;&#97;&#105;&#x6c;&#x2e;c&#111;m">&#109;&#106;&#108;&#x61;&#x67;&#97;&#116;&#x74;u&#116;&#x61;&#x40;&#x67;&#x6d;&#97;&#105;&#x6c;&#x2e;c&#111;m</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -972,7 +972,7 @@
 
 <hr />
 
-<p>An example of what we are planning in terms of the new Black MO (Original Master) and new Wide MO. The wide version is planned to be <strong>20% Wider</strong> compared to the current normal and the black version is planned to be <strong>60% Bolder</strong> compared to the current bold.</p>
+<p>An example of what we are planning in terms of the new Black MO (Original Master) and new Wide MO. The wide version is planned to be <strong>150% Wider</strong> compared to the current normal and the black version is planned to be <strong>60% Bolder</strong> compared to the current bold.</p>
 
 <p><img src="assets/media/adv_mo_mg.svg" alt="adv<em>nrm</em>wde<em>bld</em>blk" /></p>
 
@@ -1726,7 +1726,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#x61;i&#108;&#116;&#111;:&#115;&#117;&#x70;&#x70;&#111;&#x72;&#x74;&#x40;&#118;&#x69;&#x76;&#x61;&#114;&#x61;&#100;&#111;&#46;&#x63;&#x6f;&#109;">&#115;&#117;&#x70;&#x70;&#111;&#x72;&#x74;&#x40;&#118;&#x69;&#x76;&#x61;&#114;&#x61;&#100;&#111;&#46;&#x63;&#x6f;&#109;</a></li>
+<li><a href="m&#97;&#105;&#108;&#116;&#111;&#x3a;&#115;u&#x70;&#112;&#111;&#x72;&#x74;&#64;&#118;&#105;&#118;&#x61;&#114;&#x61;&#100;&#111;&#x2e;&#99;&#x6f;&#x6d;">&#115;u&#x70;&#112;&#111;&#x72;&#x74;&#64;&#118;&#105;&#118;&#x61;&#114;&#x61;&#100;&#111;&#x2e;&#99;&#x6f;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
