--- a/PREVIEW/index_SEME.html
+++ b/PREVIEW/index_SEME.html
@@ -18,13 +18,13 @@
 			<div id="typefaces">
 				<div class="ajax-wrapper">
 					<div class="typeface" id="advent_thnregbld">
-						<h2 class="sec_reg">Advent Pro SE ME 2019</h2>
-						<p class="description sec_reg">The Advent 3 Script Extension and Master Extension.</p>
+						<h2 class="4_reg">Advent Pro SE ME 2019</h2>
+						<p class="description 4_reg">The Advent 3 Script Extension and Master Extension.</p>
 						<div class="content">
 							<div class="fonts">
 								<div class="font">
 									<figure>
-										<div class="sample M L XL" spellcheck="false" style="font-family: 'AdventProSeC_thn';">
+										<div class="sample M L XL" spellcheck="false" style="font-family: 'AdventPro4_thn';">
 											<span class="info_perm">Latin pangram:</span>
 											<span>
 												The quick brown fox jumps over the lazy dog.
@@ -76,7 +76,7 @@
 							<div class="fonts">
 								<div class="font">
 									<figure>
-										<div class="sample M L XL" spellcheck="false" style="font-family: 'AdventProSeC_reg';">
+										<div class="sample M L XL" spellcheck="false" style="font-family: 'AdventPro4_reg';">
 											<span class="info_perm">Latin pangram:</span>
 											<span>
 												The quick brown fox jumps over the lazy dog.
@@ -128,7 +128,7 @@
 							<div class="fonts">
 								<div class="font">
 									<figure>
-										<div class="sample M L XL" spellcheck="false" style="font-family: 'AdventProSeC_bld';">
+										<div class="sample M L XL" spellcheck="false" style="font-family: 'AdventPro4_bld';">
 											<span class="info_perm">Latin pangram:</span>
 											<span>
 												The quick brown fox jumps over the lazy dog.
@@ -180,7 +180,59 @@
 							<div class="fonts">
 								<div class="font">
 									<figure>
-										<div class="sample M L XL" spellcheck="false" style="font-family: 'AdventProSeC_blk';">
+										<div class="sample M L XL" spellcheck="false" style="font-family: 'AdventPro4_blk';">
+											<span class="info_perm">Latin pangram:</span>
+											<span>
+												the quick brown fox jumps over the lazy dog.
+												<br>
+												THE QUICK BROWN FOX JUMPS OVER THE LAZY DOG
+											</span>
+											<hr>
+											<span class="info_perm">Greek pangram:</span>
+											<span>
+												ζαφείρι δέξου πάγκαλο, βαθών ψυχής το σήμα.
+												<br>
+												ΖΑΦΕΙΡΙ ΔΕΞΟΥ ΠΑΓΚΑΛΟ, ΒΑΘΩΝ ΨΥΧΗΣ ΤΟ ΣΗΜΑ.
+											</span>
+											<hr>
+											<span class="info_perm">Russian pangram:</span>
+											<span>
+												съешь ещё этих мягких французских булок да выпей же чаю.
+												<br>
+												СЪЕШЬ ЕЩЁ ЭТИХ МЯГКИХ ФРАНЦУЗСКИХ БУЛОК ДА ВЫПЕЙ ЖЕ ЧАЮ.
+											</span>
+											<hr>
+											<span class="info_perm">Serbian pangram:</span>
+											<span>
+												чешће цeђење мрeжастим џаком побољшава фертилизацију генских хибрида.
+												<br>
+												ЧЕШЋЕ ЦEЂЕЊЕ МРEЖАСТИМ ЏАКОМ ПОБОЉШАВА ФЕРТИЛИЗАЦИЈУ ГЕНСКИХ ХИБРИДА.
+											</span>
+											<hr>
+											<span class="info_perm">Bulgarian pangram:</span>
+											<span>
+												под южно дърво, цъфтящо в синьо, бягаше малко пухкаво зайче.
+												<br>
+												ПОД ЮЖНО ДЪРВО, ЦЪФТЯЩО В СИНЬО, БЯГАШЕ МАЛКО ПУХКАВО ЗАЙЧЕ.
+											</span>
+											<hr>
+											<span class="info_perm">Kazakh pangram?:</span>
+											<span>
+												мұны һәм немесе тіпті дар эс салам шайға ағып ең түрде бірге актёр хош чара қартаю щетка аварияға өте жатқан француз въезд сухость құймаларын жей.
+												<br>
+												МҰНЫ ҺӘМ НЕМЕСЕ ТІПТІ ДАР ЭС САЛАМ ШАЙҒА АҒЫП ЕҢ ТҮРДЕ БІРГЕ АКТЁР ХОШ ЧАРА ҚАРТАЮ ЩЕТКА АВАРИЯҒА ӨТЕ ЖАТҚАН ФРАНЦУЗ ВЪЕЗД СУХОСТЬ ҚҰЙМАЛАРЫН ЖЕЙ.
+											</span>
+											<hr>
+										</div>
+									</figure>
+								</div>
+							</div>
+						</div>
+						<div class="content">
+							<div class="fonts">
+								<div class="font">
+									<figure>
+										<div class="sample M L XL" spellcheck="false" style="font-family: 'AdventPro4_thn_wd';">
 											<span class="info_perm">Latin pangram:</span>
 											<span>
 												the quick brown fox jumps over the lazy dog.
