--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.022 | 2019/08/23</title>
+		<title>VRD | Advent | 3.022 | 2019/08/28</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#x61;&#105;&#x6c;&#x74;&#x6f;&#58;&#115;u&#112;p&#x6f;&#114;t&#x40;&#118;&#x69;&#118;a&#114;&#97;&#x64;&#111;.&#x63;&#111;&#x6d;">&#115;u&#112;p&#x6f;&#114;t&#x40;&#118;&#x69;&#118;a&#114;&#97;&#x64;&#111;.&#x63;&#111;&#x6d;</a></li>
+<li>VivaRado <a href="&#x6d;&#x61;&#105;&#108;&#116;&#x6f;&#x3a;&#x73;&#x75;&#112;p&#x6f;&#114;&#x74;&#64;v&#x69;&#x76;&#97;&#114;&#97;&#100;&#111;&#46;&#x63;&#x6f;&#x6d;">&#x73;&#x75;&#112;p&#x6f;&#114;&#x74;&#64;v&#x69;&#x76;&#97;&#114;&#97;&#100;&#111;&#46;&#x63;&#x6f;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#97;&#105;&#108;&#116;o&#x3a;&#109;&#106;&#108;&#x61;&#x67;&#97;&#116;&#x74;u&#116;&#x61;&#x40;&#x67;&#x6d;&#97;&#105;&#x6c;&#x2e;c&#111;m">&#109;&#106;&#108;&#x61;&#x67;&#97;&#116;&#x74;u&#116;&#x61;&#x40;&#x67;&#x6d;&#97;&#105;&#x6c;&#x2e;c&#111;m</a></li>
+<li>Michael LaGattuta <a href="&#x6d;a&#105;&#108;&#x74;&#x6f;:&#x6d;&#106;&#108;&#97;&#x67;&#x61;&#116;&#x74;&#117;&#x74;&#97;&#64;g&#x6d;&#97;&#x69;&#x6c;.&#x63;&#111;&#109;">&#x6d;&#106;&#108;&#97;&#x67;&#x61;&#116;&#x74;&#117;&#x74;&#97;&#64;g&#x6d;&#97;&#x69;&#x6c;.&#x63;&#111;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -964,7 +964,7 @@
   <td><strong>4.000</strong></td>
 </tr>
 <tr>
-  <td>optical Size</td>
+  <td>optical size</td>
   <td><strong>4.000</strong></td>
 </tr>
 </tbody>
@@ -1464,11 +1464,11 @@ ADV-0004-0007-0001 4 Master Extension:                              crit, des33,
         4 MaE MO 4 blk:                                             done, des77, 2019-07-06, 2019-08-19
     ADV-0004-0007-0001 MaE MG blk_it:                               done, des78, after des77, 2d
         4 MaE MO 4 blk_it:                                          done, des79, after des77, 2d
-    ADV-0004-0007-0001 MaE MG wd:                                         des34, after des79, 8d
-        4 MaE MG 1 thn_wd:                                                des45, after des79, 2d
-        4 MaE MG 2 reg_wd:                                                des46, after des45, 2d
-        4 MaE MG 3 bld_wd:                                                des47, after des46, 2d
-        4 MaE MG 4 blk_wd:                                                des57, after des47, 2d
+    ADV-0004-0007-0001 MaE MG wd:                                         des34, after des79, 25d
+        4 MaE MG 1 thn_wd:                                                des45, after des79, 7d
+        4 MaE MG 2 reg_wd:                                                des46, after des45, 6d
+        4 MaE MG 3 bld_wd:                                                des47, after des46, 6d
+        4 MaE MG 4 blk_wd:                                                des57, after des47, 6d
     ADV-0004-0007-0001 MaE MG wd_it:                                      des35, after des34, 8d
         4 MaE MG 1 reg_wd_it:                                             des48, after des34, 2d
         4 MaE MG 2 thn_wd_it:                                             des49, after des48, 2d
@@ -1726,7 +1726,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="m&#97;&#105;&#108;&#116;&#111;&#x3a;&#115;u&#x70;&#112;&#111;&#x72;&#x74;&#64;&#118;&#105;&#118;&#x61;&#114;&#x61;&#100;&#111;&#x2e;&#99;&#x6f;&#x6d;">&#115;u&#x70;&#112;&#111;&#x72;&#x74;&#64;&#118;&#105;&#118;&#x61;&#114;&#x61;&#100;&#111;&#x2e;&#99;&#x6f;&#x6d;</a></li>
+<li><a href="&#x6d;&#97;&#x69;&#x6c;&#116;&#111;&#58;&#115;&#x75;&#112;&#112;&#111;&#114;&#116;&#x40;v&#105;&#x76;a&#114;&#x61;&#x64;&#111;&#x2e;&#x63;o&#109;">&#115;&#x75;&#112;&#112;&#111;&#114;&#116;&#x40;v&#105;&#x76;a&#114;&#x61;&#x64;&#111;&#x2e;&#x63;o&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
